docs: add docs for root controller
