# docs/swagger.json
@@ -7,6 +7,26 @@
         "version": "1.0"
     },
     "paths": {
+        "/": {
+            "get": {
+                "description": "Responds with \"Hello world\" message.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "root"
+                ],
+                "summary": "Test root",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.RootResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/patients": {
             "get": {
                 "description": "Responds with the list of all patients as JSON.",
@@ -209,6 +229,19 @@
                         "$ref": "#/definitions/models.Patient"
                     }
                 },
+                "message": {
+                    "type": "string",
+                    "example": "success"
+                },
+                "status": {
+                    "type": "integer",
+                    "example": 200
+                }
+            }
+        },
+        "responses.RootResponse": {
+            "type": "object",
+            "properties": {
                 "message": {
                     "type": "string",
                     "example": "success"
